/*
 * Copyright (C) 2020 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package cuttlefish;

message DeviceConfig {

  message RILConfig {
    string ipaddr = 1;
    string gateway = 2;
    string dns = 3;
    string broadcast = 4;
    int32 prefixlen = 5;
  };

  RILConfig ril_config = 1;

  message DisplayConfig {
    int32 width = 1;
    int32 height = 2;
    int32 dpi = 3;
    int32 refresh_rate_hz = 4;
  };

  repeated DisplayConfig display_config = 2;
}
